add discord webhook (and pin typescript to 5.4.5 due to a fun discord.js bug)

--- a/server/config.example.toml
+++ b/server/config.example.toml
@@ -32,6 +32,10 @@ html = """
 </ol>
 """
 
+[discord]
+enabled = false
+webhookURL = ""
+
 [tts]
 enabled = true
 # https://git.computernewb.com/computernewb/SAPIServer
