--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/ws": "^8.5.10",
-    "typescript": "^5.5.3"
+    "typescript": "5.4.5"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
     "@fastify/websocket": "^10.0.1",
+    "discord.js": "^14.15.3",
     "fastify": "^4.28.1",
     "html-entities": "^2.5.2",
     "mysql2": "^3.10.2",
