--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
     "@parcel/packager-ts": "2.12.0",
+    "@parcel/transformer-sass": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
     "typescript": ">=3.0.0"
   }
