--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "protocol",
     "msagent.js"
   ],
+  "scripts": {
+    "format": "prettier --write **/*.{ts,html,scss}"
+  },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
     "@parcel/packager-ts": "2.12.0",
     "@parcel/transformer-sass": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
+    "prettier": "^3.3.3",
     "typescript": ">=3.0.0"
   }
 }
