--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.14.10",
     "@types/ws": "^8.5.10",
     "typescript": "5.4.5"
@@ -15,6 +16,7 @@
     "@fastify/websocket": "^10.0.1",
     "discord.js": "^14.15.3",
     "fastify": "^4.28.1",
+    "fluent-ffmpeg": "^2.1.3",
     "html-entities": "^2.5.2",
     "mysql2": "^3.10.2",
     "toml": "^3.0.0",
