--- a/server/config.example.toml
+++ b/server/config.example.toml
@@ -2,6 +2,11 @@
 host = "127.0.0.1"
 port = 3000
 proxied = true
+# Allowed CORS origins.
+# true = All origins allowed (not recommended in production)
+# false = Cross-origin requests are not allowed
+# String or array of strings = Only the specified origin(s) are allowed
+origins = true
 
 [mysql]
 host = "127.0.0.1"
@@ -45,6 +50,10 @@ tempDir = "/tmp/msac-tts"
 # Transcode SAPI5 Waveform files to Opus. Greatly reduces bandwidth usage. Requires ffmpeg to be installed and in PATH.
 transcodeOpus = true
 wavExpirySeconds = 60
+
+[images]
+maxSize = { width = 300, height = 300 }
+expirySeconds = 60
 
 [[agents]]
 friendlyName = "Clippy"
