--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
     "typescript": "5.4.5"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/static": "^7.0.4",
     "@fastify/websocket": "^10.0.1",
     "discord.js": "^14.15.3",
     "fastify": "^4.28.1",
+    "file-type": "^19.1.1",
     "fluent-ffmpeg": "^2.1.3",
     "html-entities": "^2.5.2",
     "mysql2": "^3.10.2",
+    "sharp": "^0.33.4",
     "toml": "^3.0.0",
     "ws": "^8.17.1"
   },
