--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "msagent.js"
   ],
   "scripts": {
-    "format": "prettier --write **/*.{ts,html,scss}"
+    "format": "prettier --write **/*.{ts,html,scss}",
+    "build": "yarn workspaces foreach -p -A run build"
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
