--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "file-type": "^19.1.1",
     "fluent-ffmpeg": "^2.1.3",
     "html-entities": "^2.5.2",
+    "ip-address": "^9.0.5",
     "mysql2": "^3.10.2",
     "sharp": "^0.33.4",
     "toml": "^3.0.0",
