--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "html-entities": "^2.5.2",
     "ip-address": "^9.0.5",
     "mysql2": "^3.10.2",
+    "pino": "^9.3.2",
     "sharp": "^0.33.4",
     "toml": "^3.0.0",
     "ws": "^8.17.1"
