--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,7 +9,7 @@
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
-    "@msagent-chat/msagent.js": "*",
+    "@msagent.js/web": "*",
     "@parcel/core": "^2.12.0",
     "parcel": "^2.12.0",
     "run-script-os": "^1.1.6",
