msagent.js: misc cleanup
make wasm module stuff a bit less horrid and untyped so that it can maybe be reused for other things

--- a/msagent.js/core/package.json
+++ b/msagent.js/core/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@msagent.js/core",
+  "description": "msagent.js core. Provides structures, parsing, and bitmap utilties for higher level usage",
   "version": "0.1.0",
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
