--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "msagent-chat",
   "workspaces": [
-    "server",
-    "webapp",
-    "protocol",
+    "server", 
+    "webapp", 
+    "protocol", 
     "msagent.js"
   ],
   "scripts": {
     "format": "prettier --write **/*.{ts,html,scss}",
-    "build": "bun run build:all",
-    "build:all": "for dir in server webapp protocol msagent.js; do (cd $dir && bun run build); done"
+    "build": "yarn workspaces foreach -p -A run build"
   },
-  "packageManager": "bun@1.1.12",
+  "packageManager": "yarn@4.2.2",
   "devDependencies": {
+    "@parcel/packager-ts": "2.12.0",
+    "@parcel/transformer-sass": "2.12.0",
+    "@parcel/transformer-typescript-types": "2.12.0",
     "prettier": "^3.3.3",
     "typescript": ">=3.0.0"
   }
