--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "msagent-chat",
-  {
-  "scripts": {
-    "build:webapp": "cd webapp && yarn run build",
-    "build:server": "cd server && yarn run build",
-    "build:protocol": "cd protocol && yarn run build",
-    "build:msagent": "cd msagent.js && yarn run build",
-    "build": "yarn run build:webapp && yarn run build:server && yarn run build:protocol && yarn run build:msagent"
-  },
-  "packageManager": "yarn@4.2.2",
-  "devDependencies": {
-    "@parcel/packager-ts": "2.12.0",
-    "@parcel/transformer-sass": "2.12.0",
-    "@parcel/transformer-typescript-types": "2.12.0",
-    "prettier": "^3.3.3",
-    "typescript": ">=3.0.0"
-  }
+    "name": "msagent-chat",
+    "scripts": {
+        "build:webapp": "cd webapp && yarn build",
+        "build:server": "cd server && yarn build", 
+        "build:protocol": "cd protocol && yarn build",
+        "build:msagent": "cd msagent.js && yarn build",
+        "build": "yarn build:webapp && yarn build:server && yarn build:protocol && yarn build:msagent"
+    },
+    "packageManager": "yarn@4.2.2",
+    "devDependencies": {
+        "@parcel/packager-ts": "2.12.0",
+        "@parcel/transformer-sass": "2.12.0", 
+        "@parcel/transformer-typescript-types": "2.12.0",
+        "prettier": "^3.3.3",
+        "typescript": ">=3.0.0"
+    }
 }
