--- a/package.json
+++ b/package.json
@@ -1,48 +1,25 @@
 {
-    "name": "msagent-chat",
-    "version": "1.0.0",
-    "main": "dist/index.js",
+    "name": "msagent-chat-monorepo",
+    "private": true,
+    "workspaces": [
+        "msagent.js",
+        "protocol",
+        "server", 
+        "webapp"
+    ],
     "scripts": {
-        "start": "node dist/index.js",
-        "dev": "nodemon --exec ts-node src/index.ts",
-        "build": "tsc",
-        "lint": "eslint . --ext .ts",
-        "test": "jest",
-        "prepare": "husky install"
+        "start": "npm run start -w msagent.js -w server -w webapp",
+        "build": "npm run build -w msagent.js -w protocol -w server -w webapp",
+        "dev": "npm run dev -w msagent.js -w server -w webapp",
+        "test": "npm run test -w msagent.js -w protocol -w server -w webapp",
+        "lint": "npm run lint -w msagent.js -w protocol -w server -w webapp"
     },
-    "packageManager": "yarn@4.2.2",
     "engines": {
         "node": ">=18.0.0",
-        "yarn": ">=4.0.0"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "dotenv": "^16.4.5"
+        "npm": ">=10.0.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/jest": "^29.5.12",
-        "@types/node": "^20.11.30",
-        "@typescript-eslint/eslint-plugin": "^7.3.1",
-        "@typescript-eslint/parser": "^7.3.1",
-        "eslint": "^8.57.0",
-        "husky": "^9.0.11",
-        "jest": "^29.7.0",
-        "nodemon": "^3.1.0",
-        "ts-jest": "^29.1.2",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.4.3"
-    },
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "node"
-    },
-    "eslintConfig": {
-        "parser": "@typescript-eslint/parser",
-        "plugins": ["@typescript-eslint"],
-        "extends": [
-            "eslint:recommended",
-            "plugin:@typescript-eslint/recommended"
-        ]
+        "typescript": "^5.4.3",
+        "eslint": "^8.57.0"
     }
 }
