--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "msagent-chat",
   "workspaces": [
-    "server", 
+    "server",
     "webapp", 
     "protocol", 
     "msagent.js"
   ],
   "scripts": {
-    "format": "prettier --write **/*.{ts,html,scss}",
-    "build": "npm run build --workspaces",
+    "format": "prettier --write \"**/*.{ts,html,scss}\"",
+    "build": "npm run build -w server -w webapp -w protocol -w msagent.js",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
+  "type": "module",
   "packageManager": "npm@10.x",
   "devDependencies": {
     "@types/node": "^20.14.2",
