--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
   "name": "msagent-chat",
-  "private": true,
-  "type": "module",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "deno run --allow-net --allow-read --allow-write src/server/main.ts",
+    "format": "deno fmt **/*.{ts,html}",
+    "build": "deno compile src/server/main.ts",
+    "test": "deno test"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  },
   "workspaces": [
     "server",
     "webapp", 
-    "protocol", 
+    "protocol",
     "msagent.js"
-  ],
-  "scripts": {
-    "clean": "rimraf **/dist **/build **/node_modules/.cache",
-    "format": "prettier --write \"**/*.{ts,html,scss}\"",
-    "build": "npm run build --workspaces",
-    "build:server": "cd server && npm run build",
-    "build:webapp": "cd webapp && npm run build",
-    "build:protocol": "cd protocol && npm run build",
-    "start": "npm run start:server",
-    "start:server": "ts-node --esm server/src/index.ts",
-    "dev": "npm run dev:server",
-    "dev:server": "nodemon --exec ts-node --esm server/src/index.ts"
-  },
-  "packageManager": "npm@10.x",
-  "devDependencies": {
-    "@types/node": "^20.14.2",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.3.3",
-    "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  ]
 }
