--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "msagent-chat",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "deno run --allow-net --allow-read --allow-write src/server/main.ts",
-    "format": "deno fmt **/*.{ts,html}",
-    "build": "deno compile src/server/main.ts",
-    "test": "deno test"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3"
-  },
   "workspaces": [
     "server",
-    "webapp", 
+    "webapp",
     "protocol",
     "msagent.js"
-  ]
+  ],
+  "scripts": {
+    "format": "prettier --write **/*.{ts,html,scss}",
+    "build": "npm run build --workspaces",
+    "start": "npm run start --workspaces"
+  },
+  "packageManager": "npm@10.5.0",
+  "devDependencies": {
+    "@parcel/packager-ts": "2.12.0",
+    "@parcel/transformer-sass": "2.12.0",
+    "@parcel/transformer-typescript-types": "2.12.0",
+    "@types/node": "^20.12.7",
+    "prettier": "^3.3.3",
+    "typescript": ">=3.0.0"
+  }
 }
