--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,15 @@
 {
   "name": "@msagent-chat/server",
   "scripts": {
-   "start": "npm run build && node dist/index.js",
-   "build": "babel src --out-dir dist --extensions \".ts\"",
-   "dev": "babel src --watch --out-dir dist --extensions \".ts\""
+    "build": "tsc",
+    "serve": "node dist/index.js"
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.14.10",
     "@types/ws": "^8.5.10",
-    "typescript": "5.4.5",
-    "@babel/core": "^7.15.0",
-    "@babel/cli": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-typescript": "^7.15.0"
+    "typescript": "5.4.5"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
