--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@msagent-chat/server",
   "scripts": {
-    "build": "tsc",
+    "install-deps": "npm install",
+    "build": "npm run install-deps && tsc",
     "serve": "node dist/index.js"
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.10", 
     "@types/ws": "^8.5.10",
     "typescript": "5.4.5"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "@fastify/static": "^7.0.4",
+    "@fastify/static": "^7.0.4", 
     "@fastify/websocket": "^10.0.1",
     "discord.js": "^14.15.3",
     "fastify": "^4.28.1",
